--- a/dippa.tex
+++ b/dippa.tex
@@ -9,7 +9,6 @@
 
 % Viitteet
 \usepackage{natbib}
-\defcitealias{rsaanimate}{RSA Animate, 2010}
 
 % Otsikkojen päätteetön fontti
 \usepackage{sectsty}
@@ -20,8 +19,8 @@
 
 \begin{document}
 
-\title{\small T-76.5612 Software Project Management \\ Exercise 5, Pre-Lecture \\ \huge Ihmisten johtaminen}
-\date{20.2.2012}
+\title{\small T-76.5612 Software Project Management \\ Exercise 7, Pre-Lecture \\ \huge Muutos ketterään kehitykseen}
+\date{27.2.2012}
 \author{Mikko Koski \\ mikko.koski@aalto.fi \\ 66467F}
 \maketitle
 
