--- a/ref.bib
+++ b/ref.bib
@@ -1,6 +1,5 @@
-@article{koski2012,
-	Author = {Mikko Koski},
-	Journal = {Imaginary computer magazine},
-	Pages = {50-60},
-	Title = {How to use Dippa editor?},
+@article{hallikainen2012,
+	Author = {Minna Hallikainen},
+	Journal = {Proceedings of the 6th IEEE International Conference on Global Software Development},
+	Title = {Experiences in Agile seating, facilities and solutions - Multisite environment},
 	Year = {2012}}
