--- a/ref.bib
+++ b/ref.bib
@@ -3,3 +3,7 @@
 	Journal = {Proceedings of the 6th IEEE International Conference on Global Software Development},
 	Title = {Experiences in Agile seating, facilities and solutions - Multisite environment},
 	Year = {2012}}
+
+@article{hallikainen2012,
+    Author = {M. Seikola and H-M. Loisa and A. Jagos},
+	Title = {Kanban Implementation in a Telecom Product Maintenance}}
