--- a/ref.bib
+++ b/ref.bib
@@ -4,6 +4,6 @@
 	Title = {Experiences in Agile seating, facilities and solutions - Multisite environment},
 	Year = {2012}}
 
-@article{hallikainen2012,
+@article{seikola,
     Author = {M. Seikola and H-M. Loisa and A. Jagos},
 	Title = {Kanban Implementation in a Telecom Product Maintenance}}
