--- a/ref.bib
+++ b/ref.bib
@@ -7,3 +7,8 @@
 @article{seikola,
     Author = {M. Seikola and H-M. Loisa and A. Jagos},
 	Title = {Kanban Implementation in a Telecom Product Maintenance}}
+
+@article{mikkonen2011,
+    Author = {Kirsi Mikkonen and Marko Seikola and Air Jouppila and Christian Engblom},
+    Title = {How we learn to stop worrying and live with the uncertainties},
+    Year = {2011}}
