--- a/dippa.tex
+++ b/dippa.tex
@@ -28,6 +28,13 @@
 
 \section{Johdanto}
 
+% 1. Based on the articles discuss critically the agile transformation at Ericsson.
+% 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
+
+
+
+% 1. Super large project, multiple scrum teams, distributed teams, how the communication is arranged, how it works?
+
 \citep{hallikainen2012}
 
 \citep{seikola}
