--- a/ref.bib
+++ b/ref.bib
@@ -12,3 +12,7 @@
     Author = {Kirsi Mikkonen and Marko Seikola and Air Jouppila and Christian Engblom},
     Title = {How we learn to stop worrying and live with the uncertainties},
     Year = {2011}}
+    
+@webpage{wikiericsson,
+	Title = {Ericsson - Wikipedia},
+	Url = {http://fi.wikipedia.org/wiki/Ericsson}}
