--- a/dippa.tex
+++ b/dippa.tex
@@ -28,6 +28,8 @@
 
 \section{Johdanto}
 
+Ericsson on ruotsalainen telekommunikaatiojärjestelmien valmistaja. Telekommunikaatioala pohjautuu vahvasti standardeihin ja valtiollisiin määräyksiin, josta johtuen ala on perinteisesti ollut hyvin kankea ja hidasliikkeinen. Eric
+
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
 
