--- a/ref.bib
+++ b/ref.bib
@@ -14,6 +14,6 @@
     Year = {2011}}
     
 @webpage{wikiericsson,
-    Author = {Wikipedia}
+    Author = {Wikipedia},
 	Title = {Ericsson},
 	Url = {http://fi.wikipedia.org/wiki/Ericsson}}
