--- a/dippa.tex
+++ b/dippa.tex
@@ -30,6 +30,12 @@
 
 Ericsson on ruotsalainen telekommunikaatiojärjestelmien valmistaja \citep{wikiericsson}. Telekommunikaatioala pohjautuu vahvasti standardeihin ja valtiollisiin määräyksiin, josta johtuen ala on perinteisesti ollut hyvin kankea ja hidasliikkeinen. Ericsson teki kuitenkin vuosina 2008-2012 radikaalin muutoksen, jossa organisaation vanhat ja kankeat työtavat korvattiin ketterillä menetelmillä. \citep{mikkonen2011}
 
+Tämän esseen tarkoitusta on tarkastella Ericssonin kokemusten perusteella muutosta perinteisistä menetelmistä kohti ketteriä menetelmiä.
+
+\section{Perinteisestä ketterään}
+
+
+
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
 
