--- a/dippa.tex
+++ b/dippa.tex
@@ -34,7 +34,19 @@ Tämän esseen tarkoitusta on tarkastella Ericssonin kokemusten perusteella muut
 
 \section{Perinteisestä ketterään}
 
+Muutos perinteisistä menetelmistä ketteriin menetelmiin isossa organisaatiossa on suuri muutos. Suuren muutoksesta tekee se, että se ei ole pelkästään muutos organisaatiorakenteessa tai istumajärjestyksessä, vaan koko ajattelumaailma on muutettava kohti ketterää Lean-ajattelua. Vanhoista työtavoista pois oppiminen vaatii työtä sekä runsaasti rohkeutta. On siis selvää, että tämän laajuiset muutokset kohtaavat haasteista.
 
+Mielestäni Ericsson onnistui muutoksessaan ison organisaation haasteista huolimatta todella hyvin. Yksi tärkeimmistä onnistumisen aineksista oli mielestäni se, että Ericsson ei alloittanut suoraan massiivista organisaatiomuutosta, vaan uusia menetelmiä kokeiltiin pienen testiryhmän avulla \citep{mikkonen2011}. Pienen testiryhmän avulla organisaatio saa kerättyä itselleen tärkeää tietoa siitä mikä toimii ja mikä ei. Testiryhmän positiiviset kokemukset saattavat myös vakuuttaa organisaation muut työntekijät mallin toimivuudesta ja näin helpottaa malliin siirtymistä.
+
+\section{Muutoksen haasteet}
+
+Muutos organisaation työtavoissa saatetaan nähdä vaikeana toteuttaa ja mielestäni se on hyvin ymmärrettävää. Ericssonin tapauksessa oli muutamia hyviä esimerkkejä esteistä, joita suuren luokan muutos kohtaa.
+
+Ericssonin tapauksessa yritys joutui jatkuvasti perustelemaan itselleen tarvetta muutokselle. Yhtiö ei kohdannut suuria haasteista, jotka pakottivat muutokseen vaan päinvastoin, yhtiöllä meni hyvin ennen muutosta. \citep{mikkonen2011}
+
+Ennen muutosta yhtiön oli vaikea nähdä hyötyjä, joita muutos mukanaan voisi tuoda. Loppujen lopuksi yhtiön piti vain luottaa positiivisiin kokemuksiin muilta yhtiöiltä sekä omaan intuitioon.
+
+On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle muutokselle. Kun hyötyjä ei nähdä ennen muutosta on muutoksen perustelu organisaatiolle varmasti hankalaa. Mielestäni Ericsson kuitenkin toimi asiassa oikein, eli kokeili uutta mallia pienellä ryhmällä ennen suuren muutoksen aloittamista.
 
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
