--- a/dippa.tex
+++ b/dippa.tex
@@ -48,6 +48,12 @@ Ennen muutosta yhtiön oli vaikea nähdä hyötyjä, joita muutos mukanaan voisi
 
 On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle muutokselle. Kun hyötyjä ei nähdä ennen muutosta on muutoksen perustelu organisaatiolle varmasti hankalaa. Mielestäni Ericsson kuitenkin toimi asiassa oikein, eli kokeili uutta mallia pienellä ryhmällä ennen suuren muutoksen aloittamista.
 
+\section{Yhteenveto}
+
+Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti. Artikkeleissa, joissa kerrotaan Ericssonin muutoksesta \citep{mikkonen2011} \citep{hallikainen2012} pääosin kuvaillaan muutoksen onnistumisesta eikä juurikaan mainita, että muutoksesta olisi seurannut juuri mitään huonoa. Artikkelien perusteella voin todeta, että olisin itse toiminut varmasti samoin kuin Ericsson. Täten tehtävänannossa pyydettyä kriittistä näkökulmaa esseeseen oli hieman hankala näiden artikkelien pohjalta löytää.
+
+
+
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
 
