--- a/dippa.tex
+++ b/dippa.tex
@@ -48,9 +48,15 @@ Ennen muutosta yhtiön oli vaikea nähdä hyötyjä, joita muutos mukanaan voisi
 
 On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle muutokselle. Kun hyötyjä ei nähdä ennen muutosta on muutoksen perustelu organisaatiolle varmasti hankalaa. Mielestäni Ericsson kuitenkin toimi asiassa oikein, eli kokeili uutta mallia pienellä ryhmällä ennen suuren muutoksen aloittamista.
 
+\section{Mistä haluaisin tietää lisää?}
+
+Artikkeleissa, joissa kerrotaan Ericssonin muutoksesta \citep{mikkonen2011} \citep{hallikainen2012} pääosin kuvaillaan muutoksen onnistumisesta eikä juurikaan mainita, että muutoksesta olisi seurannut juuri mitään huonoa. Artikkeleissa ei myöskään puhuta kovinkaan paljon ongelmista, joita organisaatio muutoksen aikana kohtasi. Olisi mielenkiintoista tietää enemmän todellisista ja kivuliaistakin ongelmista, joita muutos aiheutti. Miten näistä ongelmista selvittiin? Artikkelissa annetaan esimerkki vastarinnasta uutta istumajärjestystä kohtaan, joka kuitattiin henkilökohtaisilla keskusteluilla. Uskaltanen epäillä, että kaikkein vaikeimpia ongelmia ei varmastikaan pelkällä juttelulla selvitetä.
+
+Olisi myös mielenkiintoista tietää, miten organisaatio ratkaisi ongelmat isojen hajautettujen projektien kommunikoinnissa. \citet{mikkonen2011} toteaa artikkelissaan, että kommunikaatio ei voi luottaa pelkästään Scrum tiimien Scrumiin, muttei tarjoa ongelmaan konkreettista ratkaisua. Uskaltanen tässäkin väittää, että kommunikaatio-ongelmia ei ratkaista myöskään pelkästään konferenssivideolla, Wiki-ympäristöllä ja chat-huoneilla, kuten \citet{hallikainen2012} kirjoittaa.
+
 \section{Yhteenveto}
 
-Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti. Artikkeleissa, joissa kerrotaan Ericssonin muutoksesta \citep{mikkonen2011} \citep{hallikainen2012} pääosin kuvaillaan muutoksen onnistumisesta eikä juurikaan mainita, että muutoksesta olisi seurannut juuri mitään huonoa. Artikkelien perusteella voin todeta, että olisin itse toiminut varmasti samoin kuin Ericsson. Täten tehtävänannossa pyydettyä kriittistä näkökulmaa esseeseen oli hieman hankala näiden artikkelien pohjalta löytää.
+Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti.  Artikkelien perusteella voin todeta, että olisin itse toiminut varmasti samoin kuin Ericsson. Täten tehtävänannossa pyydettyä kriittistä näkökulmaa esseeseen oli hieman hankala näiden artikkelien pohjalta löytää.
 
 
 
