--- a/dippa.tex
+++ b/dippa.tex
@@ -54,11 +54,11 @@ Artikkeleissa, joissa kerrotaan Ericssonin muutoksesta \citep{mikkonen2011} \cit
 
 Olisi myös mielenkiintoista tietää, miten organisaatio ratkaisi ongelmat isojen hajautettujen projektien kommunikoinnissa. \citet{mikkonen2011} toteaa artikkelissaan, että kommunikaatio ei voi luottaa pelkästään Scrum tiimien Scrumiin, muttei tarjoa ongelmaan konkreettista ratkaisua. Uskaltanen tässäkin väittää, että kommunikaatio-ongelmia ei ratkaista myöskään pelkästään konferenssivideolla, Wiki-ympäristöllä ja chat-huoneilla, kuten \citet{hallikainen2012} kirjoittaa.
 
+Viimeisenä aiheena haluaisin tietää kokemuksista Kanbanin käytöstä. \citet{seikola} kuvaa artikkelissaan Kanbanin käytöstä ylläpidon apuna, mutta olisin kiinnostunut kuulemaan millaisia kokemuksia Kanbanista on tuotekehityskäytössä.
+
 \section{Yhteenveto}
 
-Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti.  Artikkelien perusteella voin todeta, että olisin itse toiminut varmasti samoin kuin Ericsson. Täten tehtävänannossa pyydettyä kriittistä näkökulmaa esseeseen oli hieman hankala näiden artikkelien pohjalta löytää.
-
-
+Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti. Artikkelien perusteella voin todeta, että olisin itse toiminut varmasti samoin kuin Ericsson. Artikkelit eivät myöskään juurikaan tuoneet esille ongelmia tai epäonnistumisia muutosprosessissa, joten tehtävänannossa pyydettyä kriittistä näkökulmaa esseeseen oli hieman hankala näiden artikkelien pohjalta löytää.
 
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
