--- a/dippa.tex
+++ b/dippa.tex
@@ -38,6 +38,10 @@ Muutos perinteisistä menetelmistä ketteriin menetelmiin isossa organisaatiossa
 
 Mielestäni Ericsson onnistui muutoksessaan ison organisaation haasteista huolimatta todella hyvin. Yksi tärkeimmistä onnistumisen aineksista oli mielestäni se, että Ericsson ei alloittanut suoraan massiivista organisaatiomuutosta, vaan uusia menetelmiä kokeiltiin pienen testiryhmän avulla \citep{mikkonen2011}. Pienen testiryhmän avulla organisaatio saa kerättyä itselleen tärkeää tietoa siitä mikä toimii ja mikä ei. Testiryhmän positiiviset kokemukset saattavat myös vakuuttaa organisaation muut työntekijät mallin toimivuudesta ja näin helpottaa malliin siirtymistä.
 
+Ericssonilla ymmärrettiin mielestäni hyvin muutoksen vaatima perinpohjaisuus. Ketterien menetelmien käyttöönotto vaikuttaa laajalla skaalalla kaikkeen, mitä yhtiö tekee. Se vaikuttaa niin ajattelutapaan kuin työkaluihinkin. Luulen, että Ericsson ei olisi onnistunut muutoksessaan näin hyvin, jos työskentelyssä olisi muutettu vain prosessimalli.
+
+Sen sijaan Ericssonilla toteutettiin siirtyminen ketteriin menetelmiin laajalla rintamalla. Prosessien lisäksi organisaatio muutti koko johtamistyylien antaen työntekijöilleen enemmän vaikuttamismahdollisuutta vähentäen-ylhäältä alas kontrollointia. Samalla tiimien, henkilökohtaisen kehittymisen, rohkeuden ja kommunikaation merkitystä korostettiin. Tämä oli mielestäni yksi onnistumisen edellytyksistä, sillä Scrum ei toimi ympäristössä, jossa tiimin jäseniä käsketään ylhäältä-alas.
+
 \section{Muutoksen haasteet}
 
 Muutos organisaation työtavoissa saatetaan nähdä vaikeana toteuttaa ja mielestäni se on hyvin ymmärrettävää. Ericssonin tapauksessa oli muutamia hyviä esimerkkejä esteistä, joita suuren luokan muutos kohtaa.
@@ -62,16 +66,6 @@ Ericsson toteutti muutoksen ketteriin menetelmiin mielestäni todella hienosti. 
 
 % 1. Based on the articles discuss critically the agile transformation at Ericsson.
 % 2. Choose 1-3 topics that you would you like to learn more from Ericsson about the transformation their working practices etc. Explain what you would like to hear more and why that might be interesting.
-
-
-
-% 1. Super large project, multiple scrum teams, distributed teams, how the communication is arranged, how it works?
-
-\citep{hallikainen2012}
-
-\citep{seikola}
-
-\citep{mikkonen2011}
 
 \bibliographystyle{plainnat}
 \bibliography{ref}
