--- a/dippa.tex
+++ b/dippa.tex
@@ -34,7 +34,7 @@ Tämän esseen tarkoitusta on tarkastella Ericssonin kokemusten perusteella muut
 
 \section{Perinteisestä ketterään}
 
-Muutos perinteisistä menetelmistä ketteriin menetelmiin isossa organisaatiossa on suuri muutos. Suuren muutoksesta tekee se, että se ei ole pelkästään muutos organisaatiorakenteessa tai istumajärjestyksessä, vaan koko ajattelumaailma on muutettava kohti ketterää Lean-ajattelua. Vanhoista työtavoista pois oppiminen vaatii työtä sekä runsaasti rohkeutta. On siis selvää, että tämän laajuiset muutokset kohtaavat haasteista.
+Muutos perinteisistä menetelmistä ketteriin menetelmiin isossa organisaatiossa on suuri askel tuntemattomaan. Suuren muutoksesta tekee se, että se ei ole pelkästään muutos organisaatiorakenteessa tai istumajärjestyksessä, vaan koko ajattelumaailma on muutettava kohti ketterää Lean-ajattelua. Vanhoista työtavoista pois oppiminen vaatii työtä sekä runsaasti rohkeutta. On siis selvää, että tämän laajuiset muutokset kohtaavat haasteista.
 
 Mielestäni Ericsson onnistui muutoksessaan ison organisaation haasteista huolimatta todella hyvin. Yksi tärkeimmistä onnistumisen aineksista oli mielestäni se, että Ericsson ei alloittanut suoraan massiivista organisaatiomuutosta, vaan uusia menetelmiä kokeiltiin pienen testiryhmän avulla \citep{mikkonen2011}. Pienen testiryhmän avulla organisaatio saa kerättyä itselleen tärkeää tietoa siitä mikä toimii ja mikä ei. Testiryhmän positiiviset kokemukset saattavat myös vakuuttaa organisaation muut työntekijät mallin toimivuudesta ja näin helpottaa malliin siirtymistä.
 
