--- a/dippa.tex
+++ b/dippa.tex
@@ -50,7 +50,7 @@ Ericssonin tapauksessa yritys joutui jatkuvasti perustelemaan itselleen tarvetta
 
 Ennen muutosta yhtiön oli vaikea nähdä hyötyjä, joita muutos mukanaan voisi tuoda. Loppujen lopuksi yhtiön piti vain luottaa positiivisiin kokemuksiin muilta yhtiöiltä sekä omaan intuitioon.
 
-On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle muutokselle. Kun hyötyjä ei nähdä ennen muutosta on muutoksen perustelu organisaatiolle varmasti hankalaa. Mielestäni Ericsson kuitenkin toimi asiassa oikein, eli kokeili uutta mallia pienellä ryhmällä ennen suuren muutoksen aloittamista.
+On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle muutokselle. Kun hyötyjä ei nähdä ennen muutosta on muutoksen perustelu organisaatiolle varmasti hankalaa. Mielestäni Ericsson kuitenkin toimi asiassa oikein, eli kokeili uutta mallia pienellä ryhmällä ennen suuren muutoksen aloittamista. Rohkeudesta, jota Ericssonilla oli aloittaessaa muutosta on myös nostettava hattua.
 
 \section{Mistä haluaisin tietää lisää?}
 
