--- a/dippa.tex
+++ b/dippa.tex
@@ -56,7 +56,7 @@ On selvää, että tällaiset ennakkolähtökohdat eivät ole suotuisat isolle m
 
 Artikkeleissa, joissa kerrotaan Ericssonin muutoksesta \citep{mikkonen2011} \citep{hallikainen2012} kuvaillaan pääosin muutoksen onnistumisesta eikä juurikaan mainita, että muutoksesta olisi seurannut juuri mitään huonoa. Artikkeleissa ei myöskään puhuta kovinkaan paljon ongelmista, joita organisaatio muutoksen aikana kohtasi. Olisi mielenkiintoista tietää enemmän todellisista ja kivuliaistakin ongelmista, joita muutos aiheutti. Miten näistä ongelmista selvittiin? Artikkelissa annetaan esimerkki vastarinnasta uutta istumajärjestystä kohtaan, joka kuitattiin henkilökohtaisilla keskusteluilla. Uskaltanen epäillä, että kaikkein vaikeimpia ongelmia ei varmastikaan pelkällä juttelulla selvitetä.
 
-Olisi myös mielenkiintoista tietää, miten organisaatio ratkaisi ongelmat isojen hajautettujen projektien kommunikoinnissa. \citet{mikkonen2011} toteaa artikkelissaan, että kommunikaatiossa ei voida luottaa pelkästään Scrum tiimien Scrumiin, muttei tarjoa ongelmaan konkreettista ratkaisua. Uskaltanen tässäkin väittää, että kommunikaatio-ongelmia ei ratkaista myöskään pelkästään konferenssivideolla, Wiki-ympäristöllä ja chat-huoneilla, kuten \citet{hallikainen2012} kirjoittaa.
+Olisi myös mielenkiintoista tietää, miten organisaatio ratkaisi ongelmat isojen hajautettujen projektien kommunikoinnissa. \citet{mikkonen2011} toteaa artikkelissaan, että kommunikaatiossa ei voida luottaa pelkästään Scrum tiimien Scrumiin, muttei tarjoa ongelmaan konkreettista ratkaisua. Uskaltanen tässäkin väittää, että vaikeimpia kommunikaatio-ongelmia suurissa hajautetuissa projekteissa ei ratkaista pelkästään konferenssivideolla, Wiki-ympäristöllä ja chat-huoneilla, kuten \citet{hallikainen2012} antaa artikkelissaan ymmärtää.
 
 Viimeisenä aiheena haluaisin tietää kokemuksista Kanbanin käytöstä. \citet{seikola} kuvaa artikkelissaan Kanbanin käytöstä ylläpidon apuna, mutta olisin kiinnostunut kuulemaan millaisia kokemuksia Kanbanista on tuotekehityskäytössä.
 
