--- a/dippa.tex
+++ b/dippa.tex
@@ -40,7 +40,7 @@ Mielestäni Ericsson onnistui muutoksessaan ison organisaation haasteista huolim
 
 Ericssonilla ymmärrettiin mielestäni hyvin muutoksen vaatima perinpohjaisuus. Ketterien menetelmien käyttöönotto vaikuttaa laajalla skaalalla kaikkeen, mitä yhtiö tekee. Se vaikuttaa niin ajattelutapaan kuin työkaluihinkin. Luulen, että Ericsson ei olisi onnistunut muutoksessaan näin hyvin, jos työskentelyssä olisi muutettu vain prosessimalli.
 
-Sen sijaan Ericssonilla toteutettiin siirtyminen ketteriin menetelmiin laajalla rintamalla. Prosessien lisäksi organisaatio muutti koko johtamistyylien antaen työntekijöilleen enemmän vaikuttamismahdollisuutta vähentäen-ylhäältä alas kontrollointia. Samalla tiimien, henkilökohtaisen kehittymisen, rohkeuden ja kommunikaation merkitystä korostettiin. Tämä oli mielestäni yksi onnistumisen edellytyksistä, sillä Scrum ei toimi ympäristössä, jossa tiimin jäseniä käsketään ylhäältä-alas.
+Sen sijaan Ericssonilla toteutettiin siirtyminen ketteriin menetelmiin laajalla rintamalla. Prosessien lisäksi organisaatio muutti koko johtamistyylien antaen työntekijöilleen enemmän vaikuttamismahdollisuutta vähentäen ylhäältä-alas kontrollointia. Samalla tiimien, henkilökohtaisen kehittymisen, rohkeuden ja kommunikaation merkitystä korostettiin. Tämä oli mielestäni yksi onnistumisen edellytyksistä, sillä Scrum ei toimi ympäristössä, jossa tiimin jäseniä käsketään ylhäältä-alas.
 
 \section{Muutoksen haasteet}
 
