--- a/dippa.tex
+++ b/dippa.tex
@@ -24,7 +24,16 @@
 \author{Mikko Koski \\ mikko.koski@aalto.fi \\ 66467F}
 \maketitle
 
-\large
+\normalsize
+
+\usepackage{fancyhdr}
+
+\pagestyle{fancy}
+\lhead{\footnotesize \parbox{11cm}{Custom left-head-note} }
+\lfoot{\footnotesize \parbox{11cm}{\textit{#2}}}
+\rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
+\renewcommand\headheight{24pt}
+\renewcommand\footrulewidth{0.4pt}
 
 \section{Johdanto}
 
