--- a/dippa.tex
+++ b/dippa.tex
@@ -26,14 +26,18 @@
 
 \normalsize
 
+% page counting, header/footer
 \usepackage{fancyhdr}
+\usepackage{lastpage}
 
 \pagestyle{fancy}
-\lhead{\footnotesize \parbox{11cm}{Custom left-head-note} }
-\lfoot{\footnotesize \parbox{11cm}{\textit{#2}}}
+\lhead{\footnotesize \parbox{11cm}{Draft 1} }
+\lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
+\cfoot{}
+\rhead{\footnotesize 3}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
-\renewcommand\headheight{24pt}
-\renewcommand\footrulewidth{0.4pt}
+\renewcommand{\headheight}{24pt}
+\renewcommand{\footrulewidth}{0.4pt}
 
 \section{Johdanto}
 
