--- a/dippa.tex
+++ b/dippa.tex
@@ -28,7 +28,7 @@
 \rhead{\footnotesize 3}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 \renewcommand{\headheight}{24pt}
-\renewcommand{\footrulewidth}{0.4pt}
+# \renewcommand{\footrulewidth}{0.4pt}
 
 \begin{document}
 
