--- a/dippa.tex
+++ b/dippa.tex
@@ -22,13 +22,13 @@
 \usepackage{lastpage}
 
 \pagestyle{fancy}
-\lhead{\footnotesize \parbox{11cm}{Draft 1} }
+# \lhead{\footnotesize \parbox{11cm}{Draft 1} }
 \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
 \cfoot{}
 \rhead{\footnotesize 3}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 \renewcommand{\headheight}{24pt}
-# \renewcommand{\footrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0.4pt}
 
 \begin{document}
 
