--- a/dippa.tex
+++ b/dippa.tex
@@ -22,7 +22,7 @@
 \usepackage{lastpage}
 
 \pagestyle{fancy}
-# \lhead{\footnotesize \parbox{11cm}{Draft 1} }
+% \lhead{\footnotesize \parbox{11cm}{Draft 1} }
 \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
 \cfoot{}
 \rhead{\footnotesize 3}
