--- a/dippa.tex
+++ b/dippa.tex
@@ -25,7 +25,7 @@
 % \lhead{\footnotesize \parbox{11cm}{Draft 1} }
 \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
 \cfoot{}
-\rhead{\footnotesize 3}
+% \rhead{\footnotesize 3}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 \renewcommand{\headheight}{24pt}
 % \renewcommand{\footrulewidth}{0.4pt}
