--- a/dippa.tex
+++ b/dippa.tex
@@ -27,7 +27,7 @@
 \cfoot{}
 % \rhead{\footnotesize 3}
 \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
-\renewcommand{\headheight}{24pt}
+% \renewcommand{\headheight}{24pt}
 % \renewcommand{\footrulewidth}{0.4pt}
 
 \begin{document}
