--- a/dippa.tex
+++ b/dippa.tex
@@ -24,7 +24,7 @@
 \pagestyle{fancy}
 % \lhead{\footnotesize \parbox{11cm}{Draft 1} }
 \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
-% \cfoot{}
+\cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 % \renewcommand{\headheight}{24pt}
