--- a/dippa.tex
+++ b/dippa.tex
@@ -23,8 +23,8 @@
 
 \pagestyle{fancy}
 % \lhead{\footnotesize \parbox{11cm}{Draft 1} }
-\lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
-\cfoot{}
+% \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
+% \cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 % \renewcommand{\headheight}{24pt}
