--- a/dippa.tex
+++ b/dippa.tex
@@ -23,7 +23,7 @@
 
 \pagestyle{fancy}
 % \lhead{\footnotesize \parbox{11cm}{Draft 1} }
-% \lfoot{\footnotesize \parbox{11cm}{\textit{2}}}
+\lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}
 % \cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
