--- a/dippa.tex
+++ b/dippa.tex
@@ -29,6 +29,7 @@
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
 % \renewcommand{\headheight}{24pt}
 % \renewcommand{\footrulewidth}{0.4pt}
+\renewcommand{\headrulewidth}{0.0pt}
 
 \begin{document}
 
