--- a/dippa.tex
+++ b/dippa.tex
@@ -23,6 +23,7 @@
 
 \pagestyle{fancy}
 \lhead{\footnotesize \parbox{11cm}{} }
+\rhead{\footnotesize \parbox{11cm}{} }
 \lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}
 % \cfoot{}
 % \rhead{\footnotesize 3}
