--- a/dippa.tex
+++ b/dippa.tex
@@ -27,7 +27,7 @@
 \rhead{\footnotesize \parbox{11cm}{} }
 \lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}
 \def\LastPagenum{\@ifundefined{r@LastPage}{0}{\expandafter\expandafter\expandafter\@cdr\csname r@LastPage\endcsname\@nil\null} }
-\rfoot{\ifthenelse{\not \value{page}=\LastPagenum}{please turn over}{}}
+\rfoot{\ifthenelse{\not \value{page}=\value{LastPage}}{please turn over}{}}
 % \cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
