--- a/dippa.tex
+++ b/dippa.tex
@@ -26,7 +26,7 @@
 \lhead{\footnotesize \parbox{11cm}{} }
 \rhead{\footnotesize \parbox{11cm}{} }
 \lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}
-\rfoot{\ifthenelse{\not \value{page}=\value{LastPage}}{please turn over}{}}
+\rfoot{\ifthenelse{\not \thepage\ of \pageref{LastPage}}{please turn over}{}}
 % \cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
