--- a/dippa.tex
+++ b/dippa.tex
@@ -27,7 +27,7 @@
 \rhead{\footnotesize \parbox{11cm}{} }
 
 % TOIMII \rfoot{\ifthenelse{\not \thepage=\pageref{LastPage}}{please turn over}{}}
-\ifthenelse{\not \thepage=\pageref{LastPage}}{\lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}}{}}
+\ifthenelse{\thepage=\pageref{LastPage}}{\lfoot{\footnotesize \parbox{11cm}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}}}{}}
 % \cfoot{}
 % \rhead{\footnotesize 3}
 % \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
