--- a/dippa.tex
+++ b/dippa.tex
@@ -25,13 +25,7 @@
 \pagestyle{fancy}
 \lhead{\footnotesize \parbox{11cm}{} }
 \rhead{\footnotesize \parbox{11cm}{} }
-\lfoot{\footnotesize \parbox{11cm}{\ifthenelse{\not \thepage=\pageref{LastPage}}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}{}}}
-% TOIMI\rfoot{\ifthenelse{\not \thepage=\pageref{LastPage}}{please turn over
-% \cfoot{}
-% \rhead{\footnotesize 3}
-% \rfoot{\footnotesize Page \thepage\ of \pageref{LastPage}}
-% \renewcommand{\headheight}{24pt}
-% \renewcommand{\footrulewidth}{0.4pt}
+\lfoot{\footnotesize \parbox{11cm}{\ifthenelse{\thepage=\pageref{LastPage}}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}{}}}
 \renewcommand{\headrulewidth}{0.0pt}
 
 % \makeatletter
