--- a/dippa.tex
+++ b/dippa.tex
@@ -25,7 +25,7 @@
 \pagestyle{fancy}
 \lhead{\footnotesize \parbox{11cm}{} }
 \rhead{\footnotesize \parbox{11cm}{} }
-\lfoot{\footnotesize \parbox{11cm}{\ifthenelse{\thepage=\pageref{LastPage}}{ \\ \\ \\ \\ Created with Dippa Editor http://mkos.futupeople.com/dippa}{}}}
+\lfoot{\footnotesize \parbox{11cm}{\ifthenelse{\thepage=\pageref{LastPage}}{Created with Dippa Editor \\ http://mkos.futupeople.com/dippa}{}}}
 \renewcommand{\headrulewidth}{0.0pt}
 
 % \makeatletter
